--- a/static/index.html
+++ b/static/index.html
@@ -3,9 +3,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Scentscape — Perfume Explorer</title>
+  <title>Scentscape — Perfume Discovery</title>
   <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;1,300;1,400&family=Jost:wght@300;400;500&display=swap" rel="stylesheet" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;1,300;1,400&family=Inter:wght@300;400;500&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="/static/style.css" />
 </head>
 <body>
@@ -41,9 +42,9 @@
     <section class="hero">
       <div class="hero-inner">
         <p class="hero-eyebrow">Discover your signature</p>
-        <h1 class="hero-title">The Art of<br /><em>Fine Fragrance</em></h1>
+        <h1 class="hero-title">Find the scent that<br /><em>feels like you.</em></h1>
         <div class="search-wrap">
-          <input id="searchInput" class="search-input" type="text" placeholder="Search by name or house…" autocomplete="off" />
+          <input id="searchInput" class="search-input" type="text" placeholder="Search by name, house, or note…" autocomplete="off" />
           <span class="search-icon">⌕</span>
         </div>
       </div>
