Add multi-select filters for seasons/longevity/sillage/notes + gender badge on cards

--- a/static/index.html
+++ b/static/index.html
@@ -86,7 +86,7 @@
         </div>
         <div class="filter-group">
           <label class="filter-label">Note</label>
-          <input id="noteFilter" class="filter-input" type="text" placeholder="e.g. Rose, Oud…" list="notesList" />
+          <input id="noteFilter" class="filter-input" type="text" placeholder="Rose, Oud, Vanilla…" list="notesList" />
           <datalist id="notesList"></datalist>
         </div>
         <div class="filter-group">
