Fix ratio-based filters to match dominant values + add day/night filters (both can be dominant)

--- a/static/index.html
+++ b/static/index.html
@@ -113,6 +113,8 @@
           <button class="season-chip" data-season="summer">☀️ Summer</button>
           <button class="season-chip" data-season="fall">🍂 Fall</button>
           <button class="season-chip" data-season="winter">❄️ Winter</button>
+          <button class="season-chip" data-season="day">☀ Day</button>
+          <button class="season-chip" data-season="night">🌙 Night</button>
         </div>
         <div class="chips-group-sep"></div>
         <div class="chips-group">
